The search form and z-index of offCanvas menu got fixed

--- a/src/components/Structure/Overlay/OffCanvas.css
+++ b/src/components/Structure/Overlay/OffCanvas.css
@@ -16,6 +16,7 @@
   transform: translateX(500px);
   opacity: 0;
   padding: 5rem 1rem 0rem;
+  z-index: 2;
 }
 .offCanvasMenu > form {
   display: flex !important;
